src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
@import "./reset.css";
@import "./theme.css";

:root {
  font-size: 16px;
  font-family: var(--body-font);
  color: var(--fg-primary);
  background-color: var(--bg-base);
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  align-items: center;
}

main {
  flex: 1;
  display: flex;
  gap: var(--space-lg);
  flex-direction: column;
  max-width: var(--large-breakpoint);
  width: calc(100% - 2 * var(--space-md));
  margin: 0 var(--space-md);
}

a {
  color: var(--fg-primary);
  text-decoration: none;
}

h1 {
  font-size: var(--h1-font-size);
}

h2 {
  font-size: var(--h2-font-size);
}

h3 {
  font-size: var(--h3-font-size);
}

p,
h4 {
  font-size: var(--normal-font-size);
}

h5 {
  font-size: var(--small-font-size);
}

h6 {
  font-size: var(--smaller-font-size);
}

input,
button,
textarea,
select {
  color: var(--fg-primary);
}

button {
  border: var(--default-border);
  background-color: var(--bg-base);
  padding: var(--space-xs) var(--space-md);
  box-shadow: var(--no-shadow);
  transition: box-shadow 0.25s ease;
}

button:hover {
  box-shadow: var(--default-shadow);
  cursor: pointer;
}

.link {
  width: fit-content;
  display: flex;
  align-items: center;
  position: relative;

  &:before {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: var(--fg-primary);
    transform: scaleX(0);
    transform-origin: 0;
    transition: transform 0.5s ease;
  }

  &:hover:before {
    transform: scaleX(1);
  }
}

